--- a/plugin.xml
+++ b/plugin.xml
@@ -13,7 +13,7 @@
     <platform name="android">
          
         <!-- Replace Sound1.wav by your own sound -->
-        <resource-file src="src/Notification.wav" target="res/raw/Notification.wav" />
+        <resource-file src="src/notification.wav" target="res/raw/notification.wav" />
                  
     </platform> 
      
@@ -22,7 +22,7 @@
 	 
 	 <platform name="ios">
 
-		<resource-file src="src/Notification.wav" target="Resources/Notification.wav" />
+		<resource-file src="src/notification.wav" target="Resources/notification.wav" />
 	 
 	 </platform>
 	 
