--- a/plugin.xml
+++ b/plugin.xml
@@ -23,6 +23,7 @@
 	 <platform name="ios">
 
 		<resource-file src="src/notification1.wav" target="Resources/notification1.wav" />
+		<resource-file src="src/notification1.wav" target="Resources/www/notification1.wav" />
 	 
 	 </platform>
 	 
